--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/jest": "^29.5.5",
     "express": "^4.18.2",
     "jest": "^29.7.0",
+    "mongodb": "^6.2.0",
     "ts-jest": "^29.1.1"
   }
 }
